Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7155

Pressing ESC seems to close wrong window

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 2.7.0
    • Qt Creator 2.5.0-rc
    • All Other Issues
    • None
    • Windows Vista x64
    • cec327bd4a8a3a77f09b6e465636db2537b86580

      Now Creator has a problem similar to QTCREATORBUG-4307:

      1. Open "Tools" -> "Options..." -> "Environment" -> "External Tools"
      2. Select a tool.
      3. Click into one of the edits for Executable, Arguments or Working directory.
      4. Click on the appearing icon to open the Variables window.
      5. Double-click one of the variables.
        The variable is being added to the edit.
      6. Press ESC.
        The Options dialog is being closed.

      Instead, ESC should close the Variables window only.

      I guess the problem is, that the Options dialog gets focus after double-clicking the variable. When I click the variables windows before pressing ESC, only this is being closed.

        For Gerrit Dashboard: QTCREATORBUG-7155
        # Subject Branch Project Status CR V

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes