Close variable chooser when pressing escape.

Even if the variable chooser currently doesn't have focus.

Task-number: QTCREATORBUG-7155
Change-Id: Ie3a7527e13dd6c3f37c1abe86a596753d2b8e286
Reviewed-by: Robert Loehning <robert.loehning@digia.com>